scyan scrips and decisin matrices

--- a/src/preprocessing/datasets/process_IMMUcan.ipynb
+++ b/src/preprocessing/datasets/process_IMMUcan.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,81 +405,6 @@
    "source": [
     "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv')\n",
     "df['cell_type'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MPO                  float64\n",
-       "HistoneH3            float64\n",
-       "SMA                  float64\n",
-       "CD16                 float64\n",
-       "CD38                 float64\n",
-       "HLADR                float64\n",
-       "CD27                 float64\n",
-       "CD15                 float64\n",
-       "CD45RA               float64\n",
-       "CD163                float64\n",
-       "B2M                  float64\n",
-       "CD20                 float64\n",
-       "CD68                 float64\n",
-       "Ido1                 float64\n",
-       "CD3                  float64\n",
-       "LAG3                 float64\n",
-       "CD11c                float64\n",
-       "PD1                  float64\n",
-       "PDGFRb               float64\n",
-       "CD7                  float64\n",
-       "GrzB                 float64\n",
-       "PDL1                 float64\n",
-       "TCF7                 float64\n",
-       "CD45RO               float64\n",
-       "FOXP3                float64\n",
-       "ICOS                 float64\n",
-       "CD8a                 float64\n",
-       "CarbonicAnhydrase    float64\n",
-       "CD33                 float64\n",
-       "Ki67                 float64\n",
-       "VISTA                float64\n",
-       "CD40                 float64\n",
-       "CD4                  float64\n",
-       "CD14                 float64\n",
-       "Ecad                 float64\n",
-       "CD303                float64\n",
-       "CD206                float64\n",
-       "cleavedPARP          float64\n",
-       "DNA1                 float64\n",
-       "DNA2                 float64\n",
-       "image                 object\n",
-       "sample_id             object\n",
-       "ObjectNumber           int64\n",
-       "x                    float64\n",
-       "y                    float64\n",
-       "area                   int64\n",
-       "major_axis_length    float64\n",
-       "minor_axis_length    float64\n",
-       "eccentricity         float64\n",
-       "width_px               int64\n",
-       "height_px              int64\n",
-       "cell_labels           object\n",
-       "level_1_cell_type     object\n",
-       "level_2_cell_type     object\n",
-       "cell_type             object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dtypes"
    ]
   },
   {
@@ -544,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +487,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,6 +534,96 @@
    "source": [
     "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bin celltypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "Cancer                         210853\n",
+       "Stroma                          50127\n",
+       "CD8+_T_cell                     35867\n",
+       "M2_Macrophage                   33882\n",
+       "CD4+_T_cell                     25832\n",
+       "undefined                       18867\n",
+       "Plasma_cell                     17972\n",
+       "Neutrophil                      14723\n",
+       "BnT                             13497\n",
+       "Treg                            10809\n",
+       "Dendritic_cell                  10098\n",
+       "B_cell                           8263\n",
+       "NK_cell                          3412\n",
+       "Plasmacytoid_dendritic_cell      2915\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv')\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "Cancer                         210853\n",
+       "Stroma                          50127\n",
+       "CD8+_T_cell                     35867\n",
+       "M2_Macrophage                   33882\n",
+       "CD4+_T_cell                     25832\n",
+       "undefined                       18867\n",
+       "Plasma_cell                     17972\n",
+       "Neutrophil                      14723\n",
+       "BnT                             13497\n",
+       "Treg                            10809\n",
+       "Dendritic_cell                  10098\n",
+       "B_cell                           8263\n",
+       "NK_cell                          3412\n",
+       "Plasmacytoid_dendritic_cell      2915\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#df['cell_type'] = df['cell_type'].replace({'HLADR':'undefined'})\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'HLADR':'undefined'})\n",
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'HLADR':'undefined'})\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -627,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
