--- a/src/preprocessing/datasets/process_breast_fibro_IMC.ipynb
+++ b/src/preprocessing/datasets/process_breast_fibro_IMC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,220 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['FSP1', 'aSMA', 'Histone H3', 'CD11b_1', 'HLA-DR', 'CD146',\n",
-       "       'Cadherin-11', 'FAP', 'CD11b', 'VCAM1', 'CD20', 'CD68', 'IDO', 'CD3',\n",
-       "       'Podoplanin', 'CD11c', 'Carbonic Anhydrase IX', 'CD73', 'MMP9',\n",
-       "       'p75 (CD271)', 'CD10', 'Vimentin', 'FOXP3', 'CXCL13', 'PNAd', 'CD8',\n",
-       "       'Fibronectin', 'LYVE-1', 'PDGFR-b', 'CD34', 'CD4', 'vWF', 'CXCL-12',\n",
-       "       'CCL21', 'Keratin Epithelial', 'Iridium191', 'Iridium193', 'Ki-67',\n",
-       "       'CD45', 'Myeloperoxidase MPO', 'ImageNumber', 'CellNumber', 'x', 'y',\n",
-       "       'Area', 'MajorAxisLength', 'MinorAxisLength', 'Area_Description',\n",
-       "       'BatchID', 'SampleID', 'RoiID', 'CellID', 'celltype', 'cell_subtype',\n",
-       "       'level_1_cell_type', 'level_2_cell_type', 'cell_type'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/breast_fibro_IMC_quantification.csv')\n",
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ImageNumber</th>\n",
-       "      <th>CellNumber</th>\n",
-       "      <th>BatchID</th>\n",
-       "      <th>SampleID</th>\n",
-       "      <th>RoiID</th>\n",
-       "      <th>CellID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>56</td>\n",
-       "      <td>20201013</td>\n",
-       "      <td>TBB075</td>\n",
-       "      <td>TBB075_1</td>\n",
-       "      <td>TBB075_1_56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>96</td>\n",
-       "      <td>20201013</td>\n",
-       "      <td>TBB075</td>\n",
-       "      <td>TBB075_1</td>\n",
-       "      <td>TBB075_1_96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>20201013</td>\n",
-       "      <td>TBB075</td>\n",
-       "      <td>TBB075_1</td>\n",
-       "      <td>TBB075_1_101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>114</td>\n",
-       "      <td>20201013</td>\n",
-       "      <td>TBB075</td>\n",
-       "      <td>TBB075_1</td>\n",
-       "      <td>TBB075_1_114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>138</td>\n",
-       "      <td>20201013</td>\n",
-       "      <td>TBB075</td>\n",
-       "      <td>TBB075_1</td>\n",
-       "      <td>TBB075_1_138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>553116</th>\n",
-       "      <td>108</td>\n",
-       "      <td>5061</td>\n",
-       "      <td>20201023</td>\n",
-       "      <td>TBB226</td>\n",
-       "      <td>TBB226_8</td>\n",
-       "      <td>TBB226_8_5061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>553117</th>\n",
-       "      <td>108</td>\n",
-       "      <td>5763</td>\n",
-       "      <td>20201023</td>\n",
-       "      <td>TBB226</td>\n",
-       "      <td>TBB226_8</td>\n",
-       "      <td>TBB226_8_5763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>553118</th>\n",
-       "      <td>109</td>\n",
-       "      <td>318</td>\n",
-       "      <td>20201023</td>\n",
-       "      <td>TBB226</td>\n",
-       "      <td>TBB226_9</td>\n",
-       "      <td>TBB226_9_318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>553119</th>\n",
-       "      <td>109</td>\n",
-       "      <td>1123</td>\n",
-       "      <td>20201023</td>\n",
-       "      <td>TBB226</td>\n",
-       "      <td>TBB226_9</td>\n",
-       "      <td>TBB226_9_1123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>553120</th>\n",
-       "      <td>109</td>\n",
-       "      <td>4033</td>\n",
-       "      <td>20201023</td>\n",
-       "      <td>TBB226</td>\n",
-       "      <td>TBB226_9</td>\n",
-       "      <td>TBB226_9_4033</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>553121 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        ImageNumber  CellNumber   BatchID SampleID     RoiID         CellID\n",
-       "0                 1          56  20201013   TBB075  TBB075_1    TBB075_1_56\n",
-       "1                 1          96  20201013   TBB075  TBB075_1    TBB075_1_96\n",
-       "2                 1         101  20201013   TBB075  TBB075_1   TBB075_1_101\n",
-       "3                 1         114  20201013   TBB075  TBB075_1   TBB075_1_114\n",
-       "4                 1         138  20201013   TBB075  TBB075_1   TBB075_1_138\n",
-       "...             ...         ...       ...      ...       ...            ...\n",
-       "553116          108        5061  20201023   TBB226  TBB226_8  TBB226_8_5061\n",
-       "553117          108        5763  20201023   TBB226  TBB226_8  TBB226_8_5763\n",
-       "553118          109         318  20201023   TBB226  TBB226_9   TBB226_9_318\n",
-       "553119          109        1123  20201023   TBB226  TBB226_9  TBB226_9_1123\n",
-       "553120          109        4033  20201023   TBB226  TBB226_9  TBB226_9_4033\n",
-       "\n",
-       "[553121 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[['ImageNumber', 'CellNumber','BatchID', 'SampleID', 'RoiID', 'CellID']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.rename(columns={'ImageNumber': 'sample_id', 'CellNumber': 'cell_id', 'SampleID': 'PatientID', 'CellID': 'unique_cell_id'})\n",
-    "df = df.drop(columns=['BatchID'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -624,22 +411,14 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/breast_fibro_IMC_quantification.csv')\n",
     "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/breast_fibro_IMC_quantification.csv', index=False)"
    ]
   },
   {
@@ -647,7 +426,119 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df[['ImageNumber', 'CellNumber','BatchID', 'SampleID', 'RoiID', 'CellID']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={'ImageNumber': 'sample_id', 'CellNumber': 'cell_id', 'SampleID': 'PatientID', 'CellID': 'unique_cell_id'})\n",
+    "df = df.drop(columns=['BatchID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/breast_fibro_IMC_quantification.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bin some uninormative celtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "Cancer             160295\n",
+       "undefined           65482\n",
+       "hypoxic Cancer      62023\n",
+       "Vimentin high       61102\n",
+       "SMA+_Fibroblast     38984\n",
+       "CD4+_T_cell         24076\n",
+       "Lymphatic           16129\n",
+       "CD8+_T_cell         13643\n",
+       "Myeloid             12186\n",
+       "Macrophage          11912\n",
+       "FN_Cdh11_mCAF       10727\n",
+       "Blood               10531\n",
+       "Neutrophil           9933\n",
+       "vCAF                 9513\n",
+       "B_cell               8528\n",
+       "Fibroblast           4877\n",
+       "CD10_CAF             4653\n",
+       "CD4_Treg             4615\n",
+       "CD8_Treg             3907\n",
+       "T_cell               3819\n",
+       "HEV                  2975\n",
+       "IDO_CD4              2676\n",
+       "ki67_CD4             1631\n",
+       "CXCL13_CAF           1551\n",
+       "IDO_CD8              1198\n",
+       "CD34_CAF             1190\n",
+       "CD4_CXCL13            972\n",
+       "CD73_CAF              893\n",
+       "ki67_CD8              853\n",
+       "CD8_CXCL13            779\n",
+       "IDO_CAF               527\n",
+       "hypoxia               359\n",
+       "CCL21_CAF             323\n",
+       "CA9_CD10_CAF          259\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'hypoxia': 'undefined'})\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'hypoxia': 'undefined'})\n",
+    "df['cell_type'] = df['cell_type'].replace({'hypoxia': 'undefined'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/breast_fibro_IMC_quantification.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -666,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
