--- a/src/preprocessing/datasets/process_cHL2.ipynb
+++ b/src/preprocessing/datasets/process_cHL2.ipynb
@@ -471,6 +471,115 @@
    "source": [
     "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           unedfined\n",
+       "1         CD4+_T_cell\n",
+       "2         CD4+_T_cell\n",
+       "3         Endothelial\n",
+       "4           unedfined\n",
+       "             ...     \n",
+       "230884    CD4+_T_cell\n",
+       "230885    CD4+_T_cell\n",
+       "230886    CD4+_T_cell\n",
+       "230887    CD4+_T_cell\n",
+       "230888      unedfined\n",
+       "Name: cell_type, Length: 230889, dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "CD4+_T_cell       54832\n",
+       "Treg              39962\n",
+       "B_cell            24129\n",
+       "M2_Macrophage     23726\n",
+       "Dendritic_cell    19824\n",
+       "Neutrophil        16833\n",
+       "unedfined         15758\n",
+       "CD8+_T_cell       13120\n",
+       "Cancer             7102\n",
+       "Endothelial        5809\n",
+       "M1_Macrophage      4909\n",
+       "NK_cell            4885\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "CD4+_T_cell       54832\n",
+       "Treg              39962\n",
+       "B_cell            24129\n",
+       "M2_Macrophage     23726\n",
+       "Dendritic_cell    19824\n",
+       "Neutrophil        16833\n",
+       "undefined         15758\n",
+       "CD8+_T_cell       13120\n",
+       "Cancer             7102\n",
+       "Endothelial        5809\n",
+       "M1_Macrophage      4909\n",
+       "NK_cell            4885\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'unedfined':'undefined'})\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'undefined':'Undefined'})\n",
+    "df['cell_type'] = df['cell_type'].replace({'unedfined':'undefined'})\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -489,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
