--- a/src/preprocessing/datasets/process_feto_maternal.ipynb
+++ b/src/preprocessing/datasets/process_feto_maternal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,10 +573,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "Fibroblast        154723\n",
+       "Myofibroblasts     63399\n",
+       "M2a_Macrophage     42962\n",
+       "unedfined          38420\n",
+       "NK1                35805\n",
+       "EVT1a              25586\n",
+       "EVT1b              20236\n",
+       "Endothelial        19440\n",
+       "Glandular          18102\n",
+       "NK2                15450\n",
+       "M1b_Macrophage      9538\n",
+       "M2c_Macrophage      6893\n",
+       "NK3                 6756\n",
+       "CD8+_T_cell         5975\n",
+       "M1a_Macrophage      5885\n",
+       "EVT2                5419\n",
+       "EVT1c               3976\n",
+       "NK_T_cell           3237\n",
+       "muscle              3117\n",
+       "Placental_Mac       2148\n",
+       "NK4                 1941\n",
+       "CD4+_T_cell         1927\n",
+       "Dendritic_cell      1865\n",
+       "M2b_Macrophage      1780\n",
+       "Mast_cell            682\n",
+       "Treg                  87\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/feto_maternal_quantification.csv')\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "Fibroblast        154723\n",
+       "Myofibroblasts     63399\n",
+       "M2a_Macrophage     42962\n",
+       "undefined          38420\n",
+       "NK1                35805\n",
+       "EVT1a              25586\n",
+       "EVT1b              20236\n",
+       "Endothelial        19440\n",
+       "Glandular          18102\n",
+       "NK2                15450\n",
+       "M1b_Macrophage      9538\n",
+       "M2c_Macrophage      6893\n",
+       "NK3                 6756\n",
+       "CD8+_T_cell         5975\n",
+       "M1a_Macrophage      5885\n",
+       "EVT2                5419\n",
+       "EVT1c               3976\n",
+       "NK_T_cell           3237\n",
+       "muscle              3117\n",
+       "Placental_Mac       2148\n",
+       "NK4                 1941\n",
+       "CD4+_T_cell         1927\n",
+       "Dendritic_cell      1865\n",
+       "M2b_Macrophage      1780\n",
+       "Mast_cell            682\n",
+       "Treg                  87\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'unedfined':'undefined'})\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'undefined':'Undefined'})\n",
+    "df['cell_type'] = df['cell_type'].replace({'unedfined':'undefined'})\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/feto_maternal_quantification.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -595,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
