--- a/src/preprocessing/datasets/process_myeloma_IMC.ipynb
+++ b/src/preprocessing/datasets/process_myeloma_IMC.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running SCIMAP  2.3.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lukashat/miniforge3/envs/scimap/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning:\n",
+      "\n",
+      "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1046,6 +1064,48 @@
    "source": [
     "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/myeloma_IMC_quantification.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "Plasma_cell       45244\n",
+       "undefined          8303\n",
+       "Neutrophil         5936\n",
+       "Macrophage         5315\n",
+       "CD8+_T_cell        3824\n",
+       "CD4+_T_cell        2383\n",
+       "Endothelial        2143\n",
+       "HSCs               1038\n",
+       "Adipocyte           889\n",
+       "Dendritic_cell      477\n",
+       "Osteoblast          421\n",
+       "Osteocyte           236\n",
+       "Osteoclast          178\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/myeloma_IMC_quantification.csv')\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
