--- a/src/preprocessing/datasets/process_cHL_CODEX.ipynb
+++ b/src/preprocessing/datasets/process_cHL_CODEX.ipynb
@@ -542,6 +542,103 @@
    "source": [
     "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_CODEX_quantification.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bin some celltypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "CD4+_T_cell              37480\n",
+       "CD8+_T_cell              17184\n",
+       "B_cell                   16196\n",
+       "Dendritic_cell            9637\n",
+       "Endothelial               8705\n",
+       "Cancer                    8260\n",
+       "NK_cell                   7339\n",
+       "M2_Macrophage             7286\n",
+       "Monocyte                  6913\n",
+       "unedfined                 5108\n",
+       "Lymphatic                 3768\n",
+       "Neutrophil                3442\n",
+       "Treg                      3352\n",
+       "Mast_cell                 3324\n",
+       "M1_Macrophage             3101\n",
+       "Epithelial                2251\n",
+       "Seg Artifact              1431\n",
+       "Cytotoxic_CD8+_T_cell      384\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_CODEX_quantification.csv')\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "CD4+_T_cell              37480\n",
+       "CD8+_T_cell              17184\n",
+       "B_cell                   16196\n",
+       "Dendritic_cell            9637\n",
+       "Endothelial               8705\n",
+       "Cancer                    8260\n",
+       "NK_cell                   7339\n",
+       "M2_Macrophage             7286\n",
+       "Monocyte                  6913\n",
+       "undefined                 6539\n",
+       "Lymphatic                 3768\n",
+       "Neutrophil                3442\n",
+       "Treg                      3352\n",
+       "Mast_cell                 3324\n",
+       "M1_Macrophage             3101\n",
+       "Epithelial                2251\n",
+       "Cytotoxic_CD8+_T_cell      384\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'Seg Artifact':'undefined', 'unedfined':'undefined'})\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'Seg Artifact':'undefined', 'undefined':'undefined'})\n",
+    "df['cell_type'] = df['cell_type'].replace({'Seg Artifact':'undefined', 'unedfined':'undefined'})\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_CODEX_quantification.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -560,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
